@@ -10456,6 +10456,8 @@ namespace Thetis
             private float _beam_width_alpha;
             private float _padding;
 
+            private bool _mouse_over_stop;
+
             public clsRotatorItem()
             {
                 _fontFamily = "Trebuchet MS";
@@ -10490,6 +10492,8 @@ namespace Thetis
                 ReadingSource = Reading.AZ;
                 UpdateInterval = 1000;
                 StoreSettings = false;
+
+                _mouse_over_stop = false;
             }
             public RotatorMode ViewMode
             {
@@ -10750,6 +10754,24 @@ namespace Thetis
             public override bool ZeroOut(ref Dictionary<Reading, float> values, int rx)
             {
                 return false;
+            }
+            public bool MouseOverStop
+            {
+                set { _mouse_over_stop = value; }
+            }
+            public override void MouseUp(MouseEventArgs e)
+            {
+                if (_alow_control && _mouse_over_stop)
+                {
+                    SendRotatorMessage(false, -1, true);
+                }
+            }
+            public override void MouseDown(MouseEventArgs e)
+            {
+                if (_alow_control && _mouse_over_stop)
+                {
+                    SendRotatorMessage(false, -1, true);
+                }
             }
         }
         internal class clsDialDisplay : clsMeterItem
@@ -29000,7 +29022,7 @@ namespace Thetis
             }
             private bool _showing_rotator_ele_drag = false;
             private bool _rotator_was_dragging = false;
-            private float _dragging_rotator_degrees = -1;
+            private float _dragging_rotator_degrees = -999;
             private bool _dragging_rotator_ele = false;
             private int _dragging_old_update_rate = -1;
             private float _rotator_az_angle_deg = -999;
@@ -29023,8 +29045,8 @@ namespace Thetis
                 SharpDX.Direct2D1.Brush beam_widh_br = getDXBrushForColour(rotator.BeamWidthColour, (int)(255 * rotator.BeamWidthAlpha));
 
                 float xShift = rotator.ViewMode == clsRotatorItem.RotatorMode.BOTH ? 2f * (w * 0.0125f) : 0;
-                bool send_stop = false;
                 float radius_stop_circle = rotator.ViewMode == clsRotatorItem.RotatorMode.ELE ? (h * 0.09f) / 2f : (h * 0.15f) / 2f; // to include the numbers when clicking to move the rotator
+                bool mouse_over_stop = false;
 
                 if (rotator.Primary)
                 {
@@ -29220,12 +29242,10 @@ namespace Thetis
                     }
 
                     // check if arrow at desination
-                    if (degrees_az >= _rotator_az_angle_deg - 3 && degrees_az <= _rotator_az_angle_deg + 3)
-                        _rotator_az_angle_deg = -999;
+                    if (degrees_az >= _rotator_az_angle_deg - 3 && degrees_az <= _rotator_az_angle_deg + 3) _rotator_az_angle_deg = -999;
 
                     if (rotator.AllowControl)
-                    {
-                        bool stop_drawn = false;
+                    {                        
                         if (rotator.MouseEntered)
                         {
                             // draw red circle at centre for stop command                            
@@ -29239,16 +29259,11 @@ namespace Thetis
                                 elipse.Point.Y = centre.Y;
                                 elipse.RadiusX = radius_stop_circle; elipse.RadiusY = radius_stop_circle;
                                 _renderTarget.FillEllipse(elipse, getDXBrushForColour(System.Drawing.Color.Red));
-                                stop_drawn = true;
-
-                                if (rotator.MouseButtonDown)
-                                {
-                                    send_stop = true;
-                                    _rotator_az_angle_deg = -999;
-                                }
+                                mouse_over_stop = true;
+                                _dragging_rotator_degrees = -999;
                             }
 
-                            if (!stop_drawn && rotator.MouseButtonDown)
+                            if (!mouse_over_stop && rotator.MouseButtonDown)
                             {
                                 float temp_degrees = 0;
                                 SharpDX.Direct2D1.Brush rotator_control_br = getDXBrushForColour(rotator.ControlColour, 255);
@@ -29308,7 +29323,7 @@ namespace Thetis
 
                             _renderTarget.DrawLine(centre, new Vector2(cx, cy), rotator_control_br, h * 0.01f);
 
-                            if (stop_drawn) //draw over the top again
+                            if (mouse_over_stop) //draw over the top again
                             {
                                 elipse.Point.X = centre.X;
                                 elipse.Point.Y = centre.Y;
@@ -29416,12 +29431,10 @@ namespace Thetis
                     }
 
                     // check if arrow at desination
-                    if (degrees_ele >= _rotator_ele_angle_deg - 3 && degrees_ele <= _rotator_ele_angle_deg + 3)
-                        _rotator_ele_angle_deg = -999;
+                    if (degrees_ele >= _rotator_ele_angle_deg - 3 && degrees_ele <= _rotator_ele_angle_deg + 3) _rotator_ele_angle_deg = -999;
 
                     if (rotator.AllowControl)
                     {
-                        bool stop_drawn = false;
                         if (rotator.MouseEntered)
                         {
                             // draw red circle at pointer origin for stop command                            
@@ -29435,16 +29448,11 @@ namespace Thetis
                                 elipse.Point.Y = centre.Y;
                                 elipse.RadiusX = radius_stop_circle; elipse.RadiusY = radius_stop_circle;
                                 _renderTarget.FillEllipse(elipse, getDXBrushForColour(System.Drawing.Color.Red));
-                                stop_drawn = true;
-
-                                if (rotator.MouseButtonDown)
-                                {
-                                    send_stop = true;
-                                    _rotator_ele_angle_deg = -999;
-                                }
+                                mouse_over_stop = true;
+                                _dragging_rotator_degrees = -999;
                             }
 
-                            if (!stop_drawn && rotator.MouseButtonDown)
+                            if (!mouse_over_stop && rotator.MouseButtonDown)
                             {
                                 float temp_degrees = 0;
                                 SharpDX.Direct2D1.Brush rotator_control_br = getDXBrushForColour(rotator.ControlColour, 255);
@@ -29508,7 +29516,7 @@ namespace Thetis
 
                             _renderTarget.DrawLine(centre, new Vector2(cx, cy), rotator_control_br, h * 0.01f);
 
-                            if(stop_drawn) // draw over the top again
+                            if (mouse_over_stop) // draw over the top again
                             {
                                 elipse.Point.X = centre.X;
                                 elipse.Point.Y = centre.Y;
@@ -29520,26 +29528,26 @@ namespace Thetis
                 }
 
                 //send rotator position message
-                if (rotator.AllowControl && !rotator.MouseButtonDown && _rotator_was_dragging && _dragging_rotator_degrees >= 0)
+                rotator.MouseOverStop = mouse_over_stop;
+                if (rotator.AllowControl)
                 {
-                    _rotator_was_dragging = false;
+                    if (!mouse_over_stop && !rotator.MouseButtonDown && _rotator_was_dragging && _dragging_rotator_degrees >= 0)
+                    {
+                        _rotator_was_dragging = false;
 
-                    if (_dragging_rotator_ele)
-                        _rotator_ele_angle_deg = _dragging_rotator_degrees;
-                    else
-                        _rotator_az_angle_deg = _dragging_rotator_degrees;
+                        if (_dragging_rotator_ele)
+                            _rotator_ele_angle_deg = _dragging_rotator_degrees;
+                        else
+                            _rotator_az_angle_deg = _dragging_rotator_degrees;
 
-                    rotator.SendRotatorMessage(_dragging_rotator_ele, _dragging_rotator_degrees, send_stop);
+                        rotator.SendRotatorMessage(_dragging_rotator_ele, _dragging_rotator_degrees, false);
 
-                    _dragging_rotator_ele = false;
-                    _dragging_rotator_degrees = -1;
-                    rotator.UpdateInterval = _dragging_old_update_rate;
-                    _dragging_old_update_rate = -1;
-                    m.UpdateIntervals();
-                }
-                if(rotator.AllowControl && send_stop)
-                {
-                    rotator.SendRotatorMessage(false, -1, true);
+                        _dragging_rotator_ele = false;
+                        _dragging_rotator_degrees = -1;
+                        rotator.UpdateInterval = _dragging_old_update_rate;
+                        _dragging_old_update_rate = -1;
+                        m.UpdateIntervals();
+                    }
                 }
             }
             private float calculateDistance(PointF point1, PointF point2)
@@ -32930,12 +32938,12 @@ namespace Thetis
                 }
             }
             public void EnqueueOutbound(string data)
-            {
+            {                
                 if (!_enabled || _direction == MMIODirection.IN) return;
 
-                // limit to a max of 50. Not nice, but this will only happen if the sink/client is not available
-                // and this mmio is enabled
-                if (_outbound_queue.Count >= 50) _outbound_queue.TryDequeue(out _);
+                // limit to a max of 1000. Not nice, but this will only happen if the sink/client is not available
+                // and this mmio is enabled and we trying to send data
+                if (_outbound_queue.Count >= 1000) _outbound_queue.TryDequeue(out _);
 
                 _outbound_queue.Enqueue(data);
             }
@@ -33460,14 +33468,13 @@ namespace Thetis
             {
                 get
                 {
+                    bool connected = false;
                     try
                     {
-                        return _tcpClient.Connected;
+                        connected = _tcpClient.Connected;
                     }
-                    catch
-                    {
-                        return false;
-                    }
+                    catch { }
+                    return connected;
                 }
             }
             private void Connect()
